--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>   
 body {  
   font-family: red;  
-  background-color: blue;
+  background-color: red;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
